# bday-game

./: .gitignore  .rustfmt.toml  Cargo.toml
common/: Cargo.toml
common/src/: config.rs  crossword.rs  lib.rs  msg.rs  player_info.rs  util.rs
server/: .gitignore  Cargo.toml
server/src/: client_context.rs  main.rs  server_state.rs
src/: args.rs  client.rs  crossword.rs  interactive_grid.rs  main.rs  manager.rs  pc.rs  q_prompt.rs  run_game.rs  screen_manager.rs  textbox.rs
termgame/: Cargo.toml
termgame/src/: draw.rs  entity.rs  error.rs  event_loop.rs  lib.rs  pos.rs  scene.rs  window.rs
util/: Cargo.toml
util/src/: error.rs  grid.rs  lib.rs  pos.rs  time.rs  union_find.rs  variant.rs
xword_dict/: Cargo.toml
xword_dict/src/: lib.rs  xword_dict.rs
xword_gen/: .gitignore  Cargo.toml
xword_gen/src/: dlx.rs  lib.rs  main.rs  word_bank.rs  xword.rs  xword_solver.rs
