[package]
name = "xword_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
xword_dict = { path = "../xword_dict" }
dlx = { git = "https://github.com/ClaytonKnittel/dlx-rs.git", rev = "e3d7fe11ca2c2cb3e62b90fc265c43fc9d58b813" }
itertools = "0.14.0"
googletest = "0.13.0"
rand = "0.9.0"
bitcode = { version = "0.6.4", features = ["derive"] }
pprof = { version = "0.14.0", features = ["flamegraph"] }
