[package]
name = "xword_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
xword_dict = { path = "../xword_dict" }
dlx = { git = "https://github.com/ClaytonKnittel/dlx-rs.git", rev = "8a0ffd104836163de5002ec9b409e5e319429c75" }
itertools = "0.14.0"
googletest = "0.13.0"
rand = "0.9.0"
bitcode = { version = "0.6.4", features = ["derive"] }
pprof = { version = "0.14.0", features = ["flamegraph"] }
