[package]
name = "xword_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
xword_dict = { path = "../xword_dict" }
dlx = { git = "https://github.com/ClaytonKnittel/dlx-rs.git", rev = "ee50acdd6d8d58dfe7f36aec0ff3f808d354d6b8" }
itertools = "0.14.0"
googletest = "0.13.0"
rand = "0.9.0"
bitcode = { version = "0.6.4", features = ["derive"] }
pprof = { version = "0.14.0", features = ["flamegraph"] }
